[tool.poetry]
name = "plot-utils"
version = "0.0.1"
authors = ["Tatiana Khabarova"]
description = "Data preparation package for plotting"

[tool.poetry.dependencies]
python = ">=3.10"
pandas = ">=1.4"
pandas = ">=1.24"
matplotlib = '>=3.6'

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
